# neuroaging

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
figures/fig2/: lin_unw_adc.csv  lin_unw_gm_vol.csv  lin_w_adc.csv  lin_w_gm_vol.csv  quad_unw_adc.csv  quad_unw_gm_vol.csv  quad_w_adc.csv  quad_w_gm_vol.csv  unw_compare_adc.csv  unw_compare_gm_vol.csv  w_compare_adc.csv  w_compare_gm_vol.csv
figures/fig5/schaefer2018tian2020_400_7/adc/network_matrices/: Q1.csv  Q10.csv  Q11.csv  Q12.csv  Q13.csv  Q14.csv  Q15.csv  Q16.csv  Q17.csv  Q18.csv  Q19.csv  Q2.csv  Q20.csv  Q21.csv  Q22.csv  Q23.csv  Q24.csv  Q25.csv  Q26.csv  Q27.csv  Q28.csv  Q29.csv  Q3.csv  Q30.csv  Q31.csv  Q32.csv  Q33.csv  Q34.csv  Q35.csv  Q36.csv  Q37.csv  Q38.csv  (+18 more)
figures/fig5/schaefer2018tian2020_400_7/gm_vol/: Q1.csv  Q10.csv  Q11.csv  Q12.csv  Q13.csv  Q14.csv  Q15.csv  Q16.csv  Q17.csv  Q18.csv  Q19.csv  Q2.csv  Q20.csv  Q21.csv  Q22.csv  Q23.csv  Q24.csv  Q25.csv  Q26.csv  Q27.csv  Q28.csv  Q29.csv  Q3.csv  Q30.csv  Q31.csv  Q32.csv  Q33.csv  Q34.csv  Q35.csv  Q36.csv  Q37.csv  Q38.csv  Q39.csv  Q4.csv  Q40.csv  Q41.csv  Q42.csv  Q43.csv  Q44.csv  Q45.csv  (+10 more)
neuroaging/: __init__.py  dataset.py  features.py  plots.py
neuroaging/modeling/: predict.py  train.py
neuroaging/utils/: utils.py
notebooks/: setup_data.ipynb
notebooks/fig1/: fig1.ipynb
notebooks/fig2/: fig2.ipynb
notebooks/fig3/: fig3 copy.ipynb  fig3.ipynb
notebooks/fig4/: fig4.ipynb  qV1v.csv
notebooks/fig5/: calculate_network_measures.py  fig5.ipynb
(+50 files in other folders)
