[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "neuroaging"
version = "0.0.1"
description = "Quantifying healthy brain aging using multimodal MRI metrics and statistical modeling.This project analyzes structural and diffusion MRI data to identify robust biomarkers of brain aging across the adult lifespan."
authors = [
  { name = "Gal Kepler" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["neuroaging"]
force_sort_within_sections = true


